--- a/src/main/resources/static/templates/homepage.html
+++ b/src/main/resources/static/templates/homepage.html
@@ -230,7 +230,7 @@
 	<footer>
 		<div class="legal-nav">
 			<div class="copyright">
-				Team No 7 © 2017
+				RovoTeam © 2021
 			</div>
 		</div>
 	</footer>
